# tattotoyou

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workfllows/: ci.yml
.github/workflows/: ci.yml
docs/: BASELINE.md
migrations/: env.py
migrations/versions/: 2b5c075445e1_initial_schema.py  48c8a7c0b850_initial_schema.py  a1b2c3d4e5f6_add_knowledge_base.py  c3d4e5f6a7b8_add_question_vector.py  d4e5f6a7b8c9_enforce_single_active_conversation.py  f06ddef3835f_add_platform_message_id_to_messages.py
scripts/: check_infrastructure.py  seed_knowledge.py  test_config.py  test_db.py  test_dotenv.py  validate_repository.py
src/app/: main.py
src/app/api/admin/: auth.py  knowledge.py  schemas.py
src/app/api/webhooks/: telegram.py
src/app/core/: config.py  logging.py  security.py  tls.py
src/app/domain/: __init__.py
src/app/domain/clients/: models.py
src/app/domain/conversations/: models.py
src/app/domain/knowledge/: models.py
src/app/infrastructure/db/: base.py  dependencies.py  repository.py  session.py
src/app/services/: conversation_service.py  rate_limiter.py
src/app/services/ai/: embedding_service.py  fallback_responder.py  gigachat_client.py  intent_classifier.py  knowledge_retriever.py  prompt_builder.py
src/app/services/escalation/: engine.py
src/app/services/notifications/: admin_notifier.py
src/app/workers/: celery_app.py
src/app/workers/tasks/: process_telegram_update.py  send_admin_notification.py
tests/: conftest.py
tests/integration/: __init__.py  test_repository_concurrency.py
tests/unit/: test_admin_auth.py  test_escalation_engine.py  test_health.py  test_http_client_environment.py  test_infrastructure_startup.py  test_intent_classifier.py  test_logging_security.py  test_prompt_builder.py  test_rate_limiter.py  test_repository_concurrency.py  test_telegram_security.py  test_tls.py  test_vector_migration.py  test_webhook_secret_handling.py  test_worker_resource_cleanup.py
(+6 files in other folders)
