[project]
name = "tattoo-assistant"
version = "0.1.0"
description = "AI-ассистент для тату-студии ТАТТУТУЮ"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Батраз Секинаев", email = "bsekinaev@example.com"}
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    "celery>=5.3.6",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# ============================================
# HATCHLING — современный сборщик пакетов
# ============================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# ============================================
# RUFF — линтер и formatter
# ============================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line too long (мы доверяем formatter'у)
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ============================================
# PYTEST
# ============================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/app --cov-report=term-missing"

# ============================================
# MYPY
# ============================================
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]